--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,11 @@
       <div id="chat-window">
         <div id="output"></div>
       </div>
-      <form></form>
-      <input type="text" id="handle" placeholder="Handle" />
-      <input type="text" id="message" placeholder="Message" />
-      <input type="submit" id="submit" value="Send" />
+      <form>
+        <input type="text" id="handle" placeholder="Handle" />
+        <input type="text" id="message" placeholder="Message" />
+        <input type="submit" id="send" value="Send" />
+      </form>
     </div>
     <script src="https://cdn.socket.io/4.4.0/socket.io.min.js"></script>
     <script src="script.js"></script>
